chore: update SEO tags and fix summary marker
- Add Open Graph and Twitter Card meta tags to index.html for better social sharing
- fix marker not align center  in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,13 +187,25 @@ details summary::-webkit-details-marker {
 
 /* add different marker on details summary */
 details summary::after {
-  content: url(/assets/img/icon-plus.svg);
+  content: "";
   flex-shrink: 0;
+  inline-size: 2rem;
+  block-size: 2rem;
+  background-image: url("../img/icon-plus.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 details[open] summary::after {
-  content: url(/assets/img/icon-minus.svg);
+  content: "";
   flex-shrink: 0;
+  inline-size: 2rem;
+  block-size: 2rem;
+  background-image: url("../img/icon-minus.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 /* change summary styles on hover and focus */
